# multi-stage-docker-example

./: README.md
.brev/: setup.sh
golang-app/: .golangci.yml  Dockerfile  Makefile  REAMDE.md
golang-app/.devcontainer/: devcontainer.json
golang-app/tools/: Makefile  go.mod  go.sum
python-app/: Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
python-app/.devcontainer/: devcontainer.json
python-app/config/: dev.env  localhost.env  release.env
python-app/docker-compose/: dev.yaml  helpers.yaml  release.yaml  services.yaml  worker.yaml
python-app/entrypoint/: server.sh  worker.sh
python-app/python_app/: config.py  server.py  worker.py
python-app/tests/: test_python_app.py
